--- a/style.css
+++ b/style.css
@@ -1,98 +1,200 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
+html,
 body {
-  background: #333;
-  color: #fff;
-  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  color: #333;
+  line-height: 1.6;
 }
 
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+h1,
 h2 {
-  font-size: 45px;
   font-weight: 300;
-  margin: 10px;
-}
-
-h2 span {
-  font-size: 30px;
+  line-height: 1.2;
+  margin: 10px 0;
 }
 
 p {
-  font-size: 20px;
+  margin: 10px 0;
 }
 
+img {
+  width: 100%;
+}
+
+/* Utilities */
 .container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
+  max-width: 1100px;
+  overflow: auto;
+  margin: 0 auto;
+  padding: 0 40px;
 }
 
-.container > div {
-  cursor: pointer;
-  height: 210px;
-  background-size: cover;
-  background-attachment: fixed;
+.container.flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  text-align: center;
-  -webkit-transition: all 0.5s ease-in;
-  transition: all 0.5s ease-in;
+  height: 100%;
 }
 
-.container > div:hover {
-  opacity: 0.7;
+.container.grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+
+.container .card {
+  border-radius: 10px;
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 20px;
+  color: #333;
+  background-color: #fff;
+}
+
+.btn {
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  padding: 10px 30px;
+  border-radius: 5px;
+  background-color: #047aed;
+  color: #fff;
+}
+
+.btn:hover {
   -webkit-transform: scale(0.98);
           transform: scale(0.98);
 }
 
-.container > div:nth-of-type(1) {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / 3;
+.btn:active {
+  background-color: #0360bb;
 }
 
-.container > div:nth-of-type(6) {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 2;
-  grid-column: 3 / 5;
+.btn.btn-outline {
+  background-color: transparent;
+  border: 1px #fff solid;
+  color: #fff;
 }
 
-.container > div:nth-of-type(9) {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 2;
-  grid-column: 3 / 5;
+/* Navbar */
+.navbar {
+  background-color: #047aed;
+  color: #fff;
+  height: 70px;
 }
 
-.container > div:nth-of-type(10) {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / 3;
+.navbar .flex {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.bg1 {
-  background: url("https://i.ibb.co/dBLbrRV/bg1.jpg");
+.navbar ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.bg2 {
-  background: url("https://i.ibb.co/Fb5jb3J/bg2.jpg");
-  color: #333;
+.navbar ul li a {
+  color: #fff;
+  margin: 0 5px;
+  padding: 10px;
+}
+
+.navbar ul li a:hover {
+  border-bottom: 2px #fff solid;
+}
+
+/* Showcase */
+.showcase {
+  height: 400px;
+  background-color: #047aed;
+  color: #fff;
+  position: relative;
+}
+
+.showcase::after {
+  content: "";
+  position: absolute;
+  height: 100px;
+  bottom: -80px;
+  right: 0;
+  left: 0;
+  background-color: #fff;
+  -webkit-transform: skewY(-4deg);
+          transform: skewY(-4deg);
+}
+
+.showcase .grid {
+  -ms-grid-columns: 55% 45%;
+      grid-template-columns: 55% 45%;
+  gap: 30px;
+  overflow: visible;
+}
+
+.showcase .showcase-text h1 {
+  font-size: 40px;
+}
+
+.showcase .showcase-text p {
+  margin: 20px 0;
+}
+
+.showcase .showcase-form {
+  position: relative;
+  top: 60px;
+  height: 350px;
+  width: 400px;
+  padding: 40px;
+  z-index: 100;
+}
+
+.showcase .showcase-form .form-control {
+  margin: 30px 0;
+}
+
+.showcase .showcase-form input[type="text"],
+.showcase .showcase-form input[type="email"] {
+  border: 0;
+  border-bottom: 1px #b4becb solid;
+  width: 100%;
+  padding: 3px;
+  font-size: 16px;
+  outline: none;
 }
 /*# sourceMappingURL=style.css.map */
