--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,176 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
+$text-color: #333;
+$blue-bg: #047aed;
+
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
 }
 
-h1 {
-    background-color: pink;
-    text-align: center;
+html,
+body {
+    font-size: 16px;
+    font-family: "Lato", sans-serif;
+    color: $text-color;
+    line-height: 1.6;
+}
+
+ul {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
+    color: $text-color;
+}
+
+h1,
+h2 {
+    font-weight: 300;
+    line-height: 1.2;
+    margin: 10px 0;
+}
+
+p {
+    margin: 10px 0;
+}
+
+img {
+    width: 100%;
+}
+
+/* Utilities */
+.container {
+    max-width: 1100px;
+    overflow: auto;
+    margin: 0 auto;
+    padding: 0 40px;
+
+    &.flex {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+    }
+
+    &.grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        align-items: center;
+        height: 100%;
+    }
+
+    .card {
+        border-radius: 10px;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+        padding: 20px;
+        margin: 20px;
+        color: $text-color;
+        background-color: #fff;
+    }
+}
+
+.btn {
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 5px;
+    background-color: $blue-bg;
+    color: #fff;
+
+    &:hover {
+        transform: scale(0.98);
+    }
+    &:active {
+        background-color: darken($blue-bg, 10%);
+    }
+    &.btn-outline {
+        background-color: transparent;
+        border: 1px #fff solid;
+        color: #fff;
+    }
+}
+/* Navbar */
+.navbar {
+    background-color: $blue-bg;
+    color: #fff;
+    height: 70px;
+
+    .flex {
+        justify-content: space-between;
+    }
+    ul {
+        display: flex;
+        li a {
+            color: #fff;
+            margin: 0 5px;
+            padding: 10px;
+
+            &:hover {
+                border-bottom: 2px #fff solid;
+            }
+        }
+    }
+}
+
+/* Showcase */
+.showcase {
+    height: 400px;
+    background-color: $blue-bg;
+    color: #fff;
+    position: relative;
+
+    // &::before,
+    &::after {
+        content: "";
+        position: absolute;
+        height: 100px;
+        bottom: -80px;
+        right: 0;
+        left: 0;
+        background-color: #fff;
+        transform: skewY(-4deg);
+    }
+
+    .grid {
+        grid-template-columns: 55% 45%;
+        gap: 30px;
+        overflow: visible;
+    }
+
+    .showcase-text {
+        h1 {
+            font-size: 40px;
+        }
+
+        p {
+            margin: 20px 0;
+        }
+    }
+
+    .showcase-form {
+        position: relative;
+        top: 60px;
+        height: 350px;
+        width: 400px;
+        padding: 40px;
+        z-index: 100;
+
+        .form-control {
+            margin: 30px 0;
+        }
+        input[type="text"],
+        input[type="email"] {
+            border: 0;
+            border-bottom: 1px #b4becb solid;
+            width: 100%;
+            padding: 3px;
+            font-size: 16px;
+            outline: none;
+        }
+    }
 }
